fixed button spacing and stuff

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
   border-radius: 40px;
   padding: 20px;
   background: rgba(50, 51, 51, 0.7);
+  margin-bottom: 10px;
 }
 
 .main-container2 {
@@ -92,7 +93,7 @@
   cursor: pointer;
   border: none;
   min-width: 35vh;
-  margin: 10px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
   padding: 5px 0px;
   color: #323333;
   font-family: 'Roboto', sans-serif;
